<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tabla_sombra"
    tools:context=".EstacionMeteorologica">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_principal" />

    <TextView
        android:id="@+id/textViewSaludo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingStart="15dp"
        android:text="@string/estacion_meteorologica"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/texto_menus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGetData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_buttons_menu_horizontal"
        android:layout_marginTop="@dimen/margin_buttons_menu"
        android:background="@color/main"
        android:paddingHorizontal="@dimen/padding_menus"
        android:text="@string/mandar_a_llamar_datos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/buttonReportsToday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_buttons_menu_horizontal"
        android:layout_marginTop="@dimen/margin_buttons_menu"
        android:background="@color/main"
        android:paddingHorizontal="@dimen/padding_menus"
        android:text="@string/reportes_de_hoy"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonGetData" />

    <Button
        android:id="@+id/buttonReportLastWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_buttons_menu_horizontal"
        android:layout_marginTop="@dimen/margin_buttons_menu"
        android:background="@color/main"
        android:text="@string/reportes_semana_pasada"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReportsToday" />

    <Button
        android:id="@+id/buttonReportsSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_buttons_menu_horizontal"
        android:layout_marginTop="@dimen/margin_buttons_menu"
        android:background="@color/main"
        android:text="@string/calendario_de_reportes"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReportLastWeek" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_background_table"
        android:layout_marginTop="@dimen/margin_buttons_menu"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_buttons_menu"
        android:paddingBottom="@dimen/margin_buttons_menu"
        app:layout_constraintTop_toBottomOf="@id/buttonReportsSchedule">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_rows"
            android:background="@color/tabla_sombra"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_button"
            android:weightSum="2">
            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_rows"
                android:layout_marginTop="@dimen/margin_buttons_menu"
                android:layout_weight="1"
                android:text="@string/fecha"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/texto_table"
                app:layout_constraintTop_toBottomOf="@id/buttonReportsSchedule" />

            <TextView
                android:id="@+id/dateResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_rows"
                android:layout_marginTop="@dimen/margin_buttons_menu"
                android:layout_weight="1"
                android:text="@string/resultado_fecha"
                android:textColor="@color/white"
                android:textSize="@dimen/texto_table"
                app:layout_constraintTop_toBottomOf="@id/buttonReportsSchedule" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_rows"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_button"
            android:weightSum="2">
            <TextView
                android:id="@+id/dateStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_rows"
                android:layout_marginTop="@dimen/margin_buttons_menu"
                android:layout_weight="1"
                android:text="@string/range_date_start"
                android:textAlignment="center"
                android:textColor="@color/tabla_sombra"
                android:textSize="@dimen/texto_table"
                app:layout_constraintTop_toBottomOf="@id/buttonReportsSchedule" />

            <TextView
                android:id="@+id/dateEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_rows"
                android:layout_marginTop="@dimen/margin_buttons_menu"
                android:layout_weight="1"
                android:text="@string/range_date_start"
                android:textColor="@color/tabla_sombra"
                android:textSize="@dimen/texto_table"
                app:layout_constraintTop_toBottomOf="@id/buttonReportsSchedule" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_rows"
            android:background="@color/tabla_sombra"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_button"
            android:weightSum="2">
            <TextView
                android:id="@+id/IntensidadUV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_rows"
                android:layout_marginTop="@dimen/margin_buttons_menu"
                android:layout_weight="1"
                android:text="@string/IntensidadUV"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/texto_table"
                app:layout_constraintTop_toBottomOf="@id/buttonReportsSchedule" />

            <TextView
                android:id="@+id/IntensidadUVResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_rows"
                android:layout_marginTop="@dimen/margin_buttons_menu"
                android:layout_weight="1"
                android:text="@string/IntensidadUVResult"
                android:textColor="@color/white"
                android:textSize="@dimen/texto_table"
                app:layout_constraintTop_toBottomOf="@id/buttonReportsSchedule" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>